Revert tsconfig alias changes

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,7 +1,12 @@
 {
 	"extends": "../tsconfig.base.json",
 	"compilerOptions": {
-		"incremental": false
+		"rootDir": "./",
+		"outDir": "../dist",
+		"incremental": false,
+		"paths": {
+			"@/*": ["./*"]
+		}
 	},
 	"include": ["."]
 }
