--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"test": "pnpm concurrent \"pnpm test:lint\" \"pnpm test:unit\" \"pnpm test:types\"",
 		"test:types": "concurrently \"tsc --noEmit -p tests/unit\" \"tsc --noEmit -p tests/integration\" \"tsc --noEmit -p src\" \"tsc --noEmit -p scripts\"",
 		"test:lint": "biome check --diagnostic-level=error",
-		"test:unit": "vitest run --config vitest.unit.config.mts --coverage",
+		"test:unit": "vitest run --config vitest.unit.config.mts",
 		"test:docker": "docker compose build && docker compose run --rm app",
 		"test:watch": "vitest --config vitest.unit.config.mts --coverage",
 		"test:ci:unit": "pnpm concurrent \"pnpm test:unit\" \"pnpm test:lint\" \"tsc -p tests/integration\" \"tsc -p tests/unit\"",
@@ -73,6 +73,7 @@
 		"@types/node": "^24.5.2",
 		"@types/node-cron": "^3.0.7",
 		"@vitest/coverage-v8": "^3.2.4",
+		"@vitest/ui": "3.2.4",
 		"concurrently": "^9.2.0",
 		"esbuild": "0.25.9",
 		"nodemon": "^3.1.10",
@@ -81,6 +82,7 @@
 		"sharp": "^0.34.4",
 		"tsx": "^4.20.5",
 		"typescript": "^5.9.2",
+		"vite-tsconfig-paths": "^5.1.4",
 		"vitest": "^3.2.4",
 		"ws": "^8.18.3"
 	},
