--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"scripts": {
 		"============DEVELOPMENT": "============",
-		"watch": "nodemon --delay 1ms -e ts -w src --exec \"tsx esbuild.mts && node --enable-source-maps dist\"",
+		"watch": "nodemon --delay 1ms -e ts -w src --exec \"tsx esbuild.mts && node --trace-warnings --enable-source-maps dist\"",
 		"dev": "pnpm --filter cli build && node packages/cli/dist/cli.js",
 		"watch:tsc": "tsc -w -p src",
 		"start": "pnpm watch",
@@ -35,11 +35,12 @@
 		"monorepo:test": "pnpm --stream -r test"
 	},
 	"dependencies": {
+		"@electric-sql/pglite": "^0.3.10",
 		"@oldschoolgg/collectionlog": "workspace:*",
 		"@oldschoolgg/rng": "workspace:*",
 		"@oldschoolgg/spritesheet": "workspace:*",
 		"@oldschoolgg/toolkit": "workspace:*",
-		"@prisma/client": "^6.10.1",
+		"@prisma/client": "^6.16.3",
 		"@sapphire/ratelimits": "^2.4.9",
 		"@sapphire/snowflake": "^3.5.3",
 		"@sapphire/time-utilities": "^1.6.0",
@@ -55,6 +56,7 @@
 		"node-cron": "^3.0.3",
 		"oldschooljs": "workspace:*",
 		"p-queue": "8.1.1",
+		"pglite-prisma-adapter": "^0.6.1",
 		"piscina": "^5.1.3",
 		"remeda": "^2.23.0",
 		"simple-statistics": "^7.8.3",
@@ -75,7 +77,7 @@
 		"esbuild": "0.25.9",
 		"nodemon": "^3.1.10",
 		"prettier": "^3.6.2",
-		"prisma": "^6.10.1",
+		"prisma": "^6.16.3",
 		"sharp": "^0.34.4",
 		"tsx": "^4.20.5",
 		"typescript": "^5.9.2",
