--- a/packages/robochimp/package.json
+++ b/packages/robochimp/package.json
@@ -5,29 +5,30 @@
 	"type": "module",
 	"scripts": {
 		"build": "pnpm gen && tsx esbuild.mts",
-		"build:tsc": "tsc -p src",
 		"start": "tsx ./src/index.ts",
-		"test": "concurrently --timings --raw --kill-others-on-fail \"tsc -p src\" \"pnpm test:unit\"",
-		"dev": "pnpm fetch-schema && pnpm build:tsc && pnpm test",
+		"test": "tsc -p src && pnpm test:unit",
+		"test:unit": "vitest run --config vitest.unit.config.mts",
+		"dev": "pnpm fetch-schema && pnpm build && pnpm test",
 		"gen": "concurrently \"npx prisma generate --schema prisma/bso_schema.prisma\" \"npx prisma generate --schema prisma/osb_schema.prisma\" \"npx prisma generate --schema prisma/robochimp_schema.prisma\"",
 		"fetch-schema": "tsx ./scripts/fetchSchema.ts",
-		"dbpush": "npx prisma db push --schema=./prisma/robochimp_schema.prisma",
-		"test:unit": "vitest run --config vitest.unit.config.mts"
+		"dbpush": "npx prisma db push --schema=./prisma/robochimp_schema.prisma"
 	},
 	"dependencies": {
 		"@fastify/cors": "^10.0.1",
 		"@octokit/graphql": "^8.1.1",
-		"@prisma/client": "^6.10.1",
 		"@oldschoolgg/toolkit": "workspace:*",
+		"@prisma/adapter-pg": "^6.16.3",
+		"@prisma/client": "^6.16.3",
 		"@sapphire/discord-utilities": "^2.12.0",
+		"discord.js": "^14.20.0",
 		"dotenv": "^16.4.5",
 		"fastify": "^5.1.0",
-		"remeda": "^2.23.0",
 		"fastify-raw-body": "^5.0.0",
 		"oldschooljs": "workspace:*",
+		"remeda": "^2.23.0",
 		"zod": "^3.25.67"
 	},
 	"devDependencies": {
-		"prisma": "^6.10.1"
+		"prisma": "^6.16.3"
 	}
 }
