--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,12 +1,9 @@
 {
-	"extends": "../tsconfig.base.json",
+	"extends": "../../../tsconfig.base.json",
 	"compilerOptions": {
-		"rootDir": "./",
+		"rootDir": "../../../",
 		"outDir": "../dist",
-		"incremental": false,
-		"paths": {
-			"@/*": ["./*"]
-		}
+		"incremental": false
 	},
 	"include": ["."]
 }
