Add RoboChimp code (#6525)

--- a/packages/robochimp/src/tsconfig.json
+++ b/packages/robochimp/src/tsconfig.json
@@ -1,9 +1,12 @@
 {
 	"extends": "../../../tsconfig.base.json",
 	"compilerOptions": {
-		"rootDir": "../../../",
+		"rootDir": "./",
 		"outDir": "../dist",
-		"incremental": false
+		"incremental": false,
+		"paths": {
+			"@/*": ["./*"]
+		}
 	},
 	"include": ["."]
 }
