--- a/packages/robochimp/package.json
+++ b/packages/robochimp/package.json
@@ -14,7 +14,7 @@
 		"dbpush": "npx prisma db push --schema=./prisma/robochimp_schema.prisma"
 	},
 	"dependencies": {
-		"@fastify/cors": "^10.0.1",
+		"@hono/node-server": "^1.19.5",
 		"@octokit/graphql": "^8.1.1",
 		"@oldschoolgg/toolkit": "workspace:*",
 		"@prisma/adapter-pg": "^6.16.3",
@@ -22,8 +22,7 @@
 		"@sapphire/discord-utilities": "^2.12.0",
 		"discord.js": "^14.20.0",
 		"dotenv": "^16.4.5",
-		"fastify": "^5.1.0",
-		"fastify-raw-body": "^5.0.0",
+		"hono": "^4.9.10",
 		"oldschooljs": "workspace:*",
 		"remeda": "^2.23.0",
 		"zod": "^3.25.67"
