--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5435/osb_test
 
 # Optional
 #TESTING_SERVER_ID=123456789012345678
+#USE_REAL_PG=0
 
 # Dont change these:
 TZ="UTC"
