--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"============DEVELOPMENT": "============",
 		"watch": "nodemon --delay 1ms -e ts -w src --exec \"tsx esbuild.mts && node --trace-warnings --enable-source-maps dist\"",
-		"dev": "pnpm --filter cli build && node packages/cli/dist/cli.js",
+		"dev": "pnpm --filter cli build && node --env-file=.env packages/cli/dist/cli.js",
 		"watch:tsc": "tsc -w -p src",
 		"start": "pnpm watch",
 		"lint": "tsx --tsconfig scripts/tsconfig.json scripts/lint.ts",
@@ -40,8 +40,8 @@
 		"@oldschoolgg/rng": "workspace:*",
 		"@oldschoolgg/spritesheet": "workspace:*",
 		"@oldschoolgg/toolkit": "workspace:*",
-		"@prisma/client": "^6.15.0",
-		"@prisma/adapter-pg": "^6.15.0",
+		"@prisma/client": "^6.16.3",
+		"@prisma/adapter-pg": "^6.16.3",
 		"@sapphire/ratelimits": "^2.4.9",
 		"@sapphire/snowflake": "^3.5.3",
 		"@sapphire/time-utilities": "^1.6.0",
@@ -78,7 +78,7 @@
 		"esbuild": "0.25.9",
 		"nodemon": "^3.1.10",
 		"prettier": "^3.6.2",
-		"prisma": "^6.15.0",
+		"prisma": "^6.16.3",
 		"sharp": "^0.34.4",
 		"tsx": "^4.20.5",
 		"typescript": "^5.9.2",
