--- a/.env.test
+++ b/.env.test
@@ -5,3 +5,4 @@ TEST=true
 CI=true
 DATABASE_URL="postgresql://postgres:123@127.0.0.1:5432/osb_int_test?schema=public&connection_limit=3"
 NODE_NO_WARNINGS=1
+USE_REAL_PG=1
