--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ ROBOCHIMP_DATABASE_URL=postgresql://postgres:postgres@localhost:5436/robochimp_t
 DATABASE_URL=postgresql://postgres:postgres@localhost:5435/osb_test
 
 # Optional
+#BOT_OWNER_ID=123456789012345678
 #TESTING_SERVER_ID=123456789012345678
 #USE_REAL_PG=0
 
