--- a/docs/package.json
+++ b/docs/package.json
@@ -13,14 +13,16 @@
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/preact": "^4.1.1",
 		"@astrojs/starlight": "^0.36.0",
+		"@astrojs/starlight-tailwind": "^4.0.1",
 		"@astrojs/tailwind": "^6.0.2",
+		"@tailwindcss/vite": "^4.1.14",
 		"astro": "^5.13.9",
 		"collapse-white-space": "^2.1.0",
 		"markdown-it": "^14.1.0",
 		"oldschooljs": "workspace:*",
 		"preact": "^10.26.9",
 		"remeda": "^2.23.0",
-		"tailwindcss": "^4.1.5",
+		"tailwindcss": "^4.1.14",
 		"unist-util-visit": "^5.0.0",
 		"unist-util-visit-parents": "^6.0.1"
 	},
