--- a/package.json
+++ b/package.json
@@ -87,12 +87,7 @@
 		"ws": "^8.18.3"
 	},
 	"pnpm": {
-		"overrides": {
-			"@prisma/driver-adapter-utils": "6.15.0",
-			"sharp": "0.34.4",
-			"dotenv": "16.5.0",
-			"tsdown>rolldown": "1.0.0-beta.42"
-		}
+		"neverBuiltDependencies": []
 	},
 	"packageManager": "pnpm@10.17.0+sha512.fce8a3dd29a4ed2ec566fb53efbb04d8c44a0f05bc6f24a73046910fb9c3ce7afa35a0980500668fa3573345bd644644fa98338fa168235c80f4aa17aa17fbef"
 }
