--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,11 +6,10 @@ packages:
 ignoredBuiltDependencies:
   - wtf_wikipedia
 
-onlyBuiltDependencies:
-  - "@prisma/client"
-  - "@prisma/engines"
-  - bufferutil
-  - esbuild
-  - prisma
-  - sharp
-  - skia-canvas
+neverBuiltDependencies: []
+
+overrides:
+  "@prisma/driver-adapter-utils": "6.15.0"
+  "sharp": "0.34.4"
+  "dotenv": "16.5.0"
+  "tsdown>rolldown": "1.0.0-beta.42"
