--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -13,3 +13,6 @@ overrides:
   "sharp": "0.34.4"
   "dotenv": "16.5.0"
   "tsdown>rolldown": "1.0.0-beta.42"
+  "discord-api-types": "0.38.12"
+  "undici-types": "7.14.0"
+  "@types/node": "24.5.2"
