Use new prisma client generation for much faster compilation

--- a/biome.json
+++ b/biome.json
@@ -39,7 +39,8 @@
 			"!**/icon_cache",
 			"!**/.astro",
 			"!**/.yarn",
-			"!**/.pnpm-store"
+			"!**/.pnpm-store",
+			"!src/prisma"
 		]
 	},
 	"vcs": {
