--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -4,7 +4,8 @@
 		"rootDir": "./",
 		"outDir": "../dist",
 		"paths": {
-			"@/*": ["./*"]
+			"@/*": ["./*"],
+			"@prisma/client": ["./prisma/client/client.ts"]
 		}
 	},
 	"include": ["."]
