--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"generate:robochimp": "prisma generate --no-hints --schema prisma/robochimp.prisma",
 		"bso-data": "git fetch origin bso:bso && git checkout bso -- ./data/bso/ && git diff --name-only master bso | sort > data/misc/bso-diff.txt",
 		"============BUILDING": "============",
-		"build": "pnpm build:packages && concurrently --raw \"tsx esbuild.mts\" \"pnpm test:types\"",
+		"build": "pnpm build:packages && pnpm gen && concurrently --raw \"tsx esbuild.mts\" \"pnpm test:types\"",
 		"gen": "concurrently --raw \"prisma generate --no-hints\" \"pnpm generate:robochimp\" && echo \"Generated Prisma Client\"",
 		"============TESTING": "============",
 		"test": "pnpm concurrent \"pnpm test:lint\" \"pnpm test:types\" && pnpm test:unit",
