--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"spritesheet": "tsx --tsconfig scripts/tsconfig.json ./scripts/spritesheet.ts && pnpm lint",
 		"data": "tsx --tsconfig scripts/tsconfig.json ./scripts/monster_table.ts && pnpm lint",
 		"wiki": "tsx --tsconfig scripts/tsconfig.json ./scripts/wiki.ts && pnpm lint",
-		"generate:robochimp": "prisma generate --no-hints --schema prisma/robochimp.prisma",
+		"generate:robochimp": "prisma generate --no-hints --schema robochimp.prisma",
 		"bso-data": "git fetch origin bso:bso && git checkout bso -- ./data/bso/ && git diff --name-only master bso | sort > data/misc/bso-diff.txt",
 		"============BUILDING": "============",
 		"build": "pnpm build:packages && pnpm gen && concurrently --raw \"tsx esbuild.mts\" \"pnpm test:types\"",
