--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -23,11 +23,11 @@
 		"decimal.js": "^10.6.0",
 		"deep-object-diff": "^1.1.9",
 		"deepmerge": "4.3.1",
-		"@oldschoolgg/rng": "workspace:*",
 		"fast-deep-equal": "3.1.3",
 		"math-expression-evaluator": "^1.3.14",
 		"micromatch": "^4.0.8",
-		"zod": "^4.1.12"
+		"zod": "^4.1.12",
+		"emoji-regex": "^10.6.0"
 	},
 	"peerDependencies": {
 		"discord.js": "^14.20.0"
