--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -23,6 +23,7 @@
 		"decimal.js": "^10.6.0",
 		"deep-object-diff": "^1.1.9",
 		"deepmerge": "4.3.1",
+		"@oldschoolgg/rng": "workspace:*",
 		"fast-deep-equal": "3.1.3",
 		"math-expression-evaluator": "^1.3.14",
 		"micromatch": "^4.0.8",
