--- a/package.json
+++ b/package.json
@@ -67,8 +67,7 @@
 		"zod": "^4.1.12"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.2.4",
-		"@hono/node-ws": "^1.2.0",
+		"@biomejs/biome": "^2.2.7",
 		"@types/luxon": "^3.7.1",
 		"@types/node": "^24.5.2",
 		"@vitest/coverage-v8": "^3.2.4",
@@ -80,8 +79,7 @@
 		"sharp": "^0.34.4",
 		"tsx": "^4.20.5",
 		"typescript": "^5.9.2",
-		"vitest": "^3.2.4",
-		"ws": "^8.18.3"
+		"vitest": "^3.2.4"
 	},
 	"pnpm": {
 		"neverBuiltDependencies": []
