--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -26,15 +26,14 @@
 		"@oldschoolgg/rng": "workspace:*",
 		"fast-deep-equal": "3.1.3",
 		"math-expression-evaluator": "^1.3.14",
-		"micromatch": "^4.0.8",
-		"zod": "^4.1.12"
+		"zod": "^4.1.12",
+		"emoji-regex": "^10.6.0"
 	},
 	"peerDependencies": {
 		"discord.js": "^14.20.0"
 	},
 	"devDependencies": {
 		"@types/math-expression-evaluator": "^1.2.2",
-		"discord.js": "^14.20.0",
-		"@types/micromatch": "^4.0.9"
+		"discord.js": "^14.20.0"
 	}
 }
