--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"luxon": "^3.7.2",
 		"oldschooljs": "workspace:*",
 		"p-queue": "8.1.1",
+		"pg": "^8.16.3",
 		"pglite-prisma-adapter": "^0.6.1",
 		"piscina": "^5.1.3",
 		"remeda": "^2.23.0",
@@ -73,6 +74,7 @@
 		"@biomejs/biome": "^2.2.7",
 		"@types/luxon": "^3.7.1",
 		"@types/node": "^24.5.2",
+		"@types/pg": "^8.15.5",
 		"@vitest/coverage-v8": "^3.2.4",
 		"concurrently": "^9.2.0",
 		"esbuild": "0.25.11",
