--- a/packages/oldschooljs/package.json
+++ b/packages/oldschooljs/package.json
@@ -21,6 +21,7 @@
 		"test": "concurrently \"pnpm test:unit\" \"tsc --noEmit -p test\" \"tsc --noEmit -p src\"",
 		"test:unit": "vitest run --coverage",
 		"generate": "tsx --tsconfig scripts/tsconfig.json scripts/prepare",
+		"enum": "tsx --tsconfig scripts/tsconfig.json scripts/enum.ts",
 		"build": "tsdown"
 	},
 	"dependencies": {
