--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -19,11 +19,9 @@
 		"deep-object-diff": "^1.1.9",
 		"deepmerge": "4.3.1",
 		"@oldschoolgg/rng": "workspace:*",
-		"@oldschoolgg/discord.js": "workspace:*",
 		"fast-deep-equal": "3.1.3",
 		"math-expression-evaluator": "^1.3.14",
-		"emoji-regex": "^10.6.0",
-		"@discordjs/formatters": "^0.6.1"
+		"emoji-regex": "^10.6.0"
 	},
 	"devDependencies": {
 		"@types/math-expression-evaluator": "^1.2.2"
