--- a/package.json
+++ b/package.json
@@ -41,13 +41,14 @@
 	"dependencies": {
 		"@discordjs/builders": "^1.13.0",
 		"@discordjs/formatters": "^0.6.1",
+		"@discordjs/rest": "^2.6.0",
 		"@electric-sql/pglite": "^0.3.10",
 		"@oldschoolgg/collectionlog": "workspace:*",
+		"@oldschoolgg/discord": "workspace:*",
 		"@oldschoolgg/discord.js": "workspace:*",
 		"@oldschoolgg/rng": "workspace:*",
 		"@oldschoolgg/schemas": "workspace:*",
 		"@oldschoolgg/spritesheet": "workspace:*",
-		"@oldschoolgg/discord": "workspace:*",
 		"@oldschoolgg/toolkit": "workspace:*",
 		"@prisma/adapter-pg": "^6.18.0",
 		"@prisma/client": "^6.18.0",
