--- a/packages/discord.js/package.json
+++ b/packages/discord.js/package.json
@@ -40,8 +40,7 @@
 		"fast-deep-equal": "3.1.3",
 		"lodash.snakecase": "4.1.1",
 		"magic-bytes.js": "^1.12.1",
-		"tslib": "^2.8.1",
-		"undici": "7.16.0"
+		"tslib": "^2.8.1"
 	},
 	"devDependencies": {
 		"cross-env": "^10.1.0",
