--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -13,6 +13,7 @@
 		"test": "pnpm tsc -p src --noEmit"
 	},
 	"dependencies": {
-		"zod": "^4.1.12"
+		"zod": "^4.1.12",
+		"discord-api-types": "^0.38.30"
 	}
 }
