--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -8,6 +8,11 @@
 			"types": "./dist/esm/index.d.mts",
 			"require": "./dist/cjs/index.cjs",
 			"import": "./dist/esm/index.mjs"
+		},
+		"./GeneralBank": {
+			"types": "./dist/esm/lib/GeneralBank.d.mts",
+			"require": "./dist/cjs/lib/GeneralBank.cjs",
+			"import": "./dist/esm/lib/GeneralBank.mjs"
 		}
 	},
 	"scripts": {
