--- a/docs/package.json
+++ b/docs/package.json
@@ -5,20 +5,17 @@
 	"scripts": {
 		"dev": "astro dev",
 		"start": "astro dev",
-		"build": "astro check && astro build",
+		"build": "astro build",
 		"preview": "astro preview",
 		"astro": "astro"
 	},
 	"dependencies": {
-		"@astrojs/check": "^0.9.4",
-		"@astrojs/preact": "^4.1.1",
-		"@astrojs/starlight": "^0.36.0",
-		"@astrojs/starlight-tailwind": "^4.0.1",
-		"@astrojs/tailwind": "^6.0.2",
-		"@tailwindcss/vite": "^4.1.14",
-		"astro": "^5.13.9",
+		"@astrojs/preact": "4.1.3",
+		"@astrojs/starlight": "0.36.2",
+		"@astrojs/starlight-tailwind": "4.0.2",
+		"@tailwindcss/vite": "4.1.17",
+		"astro": "5.15.4",
 		"collapse-white-space": "^2.1.0",
-		"hast": "^1.0.0",
 		"oldschooljs": "workspace:*",
 		"preact": "^10.26.9",
 		"remeda": "^2.23.0",
