--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -13,11 +13,11 @@
 		"dist"
 	],
 	"dependencies": {
-		"ink": "^4.1.0",
-		"ink-spinner": "^5.0.0",
-		"react": "^18.2.0"
+		"ink": "^6.4.0",
+		"ink-spinner": "5.0.0",
+		"react": "19.2.0"
 	},
 	"devDependencies": {
-		"@types/react": "^18.0.32"
+		"@types/react": "19.2.2"
 	}
 }
