--- a/packages/rng/package.json
+++ b/packages/rng/package.json
@@ -12,6 +12,6 @@
 		"test": "pnpm tsc -p src --noEmit && vitest run --coverage"
 	},
 	"dependencies": {
-		"pure-rand": "^6.1.0"
+		"pure-rand": "7.0.1"
 	}
 }
