--- a/packages/spritesheet/package.json
+++ b/packages/spritesheet/package.json
@@ -12,8 +12,8 @@
 		"build": "tsdown"
 	},
 	"dependencies": {
-		"fast-glob": "^3.3.3",
-		"pureimage": "^0.4.18",
+		"fast-glob": "3.3.3",
+		"pureimage": "0.4.18",
 		"sharp": "^0.34.4"
 	}
 }
