--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -12,9 +12,11 @@ overrides:
   "@prisma/driver-adapter-utils": "6.15.0"
   "sharp": "0.34.4"
   "dotenv": "16.5.0"
-  "tsdown>rolldown": "1.0.0-beta.42"
-  "discord-api-types": "0.38.31"
+  "tsdown>rolldown": "1.0.0-beta.47"
+  "discord-api-types": "0.38.32"
   "undici-types": "7.14.0"
   "@types/node": "24.5.2"
   "esbuild": "0.25.11"
   "emoji-regex": "10.6.0"
+  "wrap-ansi": "9.0.2"
+  "string-width": "7.2.0"
