--- a/packages/discord/package.json
+++ b/packages/discord/package.json
@@ -15,9 +15,9 @@
 		"@discordjs/builders": "1.13.0",
 		"@discordjs/formatters": "0.6.1",
 		"@oldschoolgg/schemas": "workspace:*",
+		"@oldschoolgg/toolkit": "workspace:*",
 		"@oldschoolgg/util": "workspace:*",
 		"discord-api-types": "0.38.32",
-		"neverthrow": "^8.2.0",
 		"remeda": "^2.23.0"
 	}
 }
