--- a/package.json
+++ b/package.json
@@ -43,11 +43,11 @@
 		"@electric-sql/pglite": "^0.3.10",
 		"@oldschoolgg/collectionlog": "workspace:*",
 		"@oldschoolgg/discord": "workspace:*",
-		"@oldschoolgg/util": "workspace:*",
 		"@oldschoolgg/rng": "workspace:*",
 		"@oldschoolgg/schemas": "workspace:*",
 		"@oldschoolgg/spritesheet": "workspace:*",
 		"@oldschoolgg/toolkit": "workspace:*",
+		"@oldschoolgg/util": "workspace:*",
 		"@prisma/adapter-pg": "^6.18.0",
 		"@prisma/client": "^6.18.0",
 		"@sapphire/snowflake": "^3.5.3",
@@ -66,6 +66,7 @@
 		"pglite-prisma-adapter": "^0.6.1",
 		"piscina": "^5.1.3",
 		"remeda": "^2.23.0",
+		"rimraf": "^6.1.0",
 		"simple-statistics": "^7.8.3",
 		"skia-canvas": "^3.0.7",
 		"sonic-boom": "^4.2.0",
