--- a/packages/oldschooljs/package.json
+++ b/packages/oldschooljs/package.json
@@ -20,6 +20,7 @@
 	"scripts": {
 		"test": "concurrently \"pnpm test:unit\" \"tsc --noEmit -p test\" \"tsc --noEmit -p src\"",
 		"test:unit": "vitest run --coverage",
+		"bench": "vitest bench",
 		"generate": "tsx --tsconfig scripts/tsconfig.json scripts/prepare",
 		"enum": "tsx --tsconfig scripts/tsconfig.json scripts/enum.ts",
 		"build": "tsdown"
