--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
 		"pglite-prisma-adapter": "^0.6.1",
 		"piscina": "^5.1.3",
 		"remeda": "^2.23.0",
-		"rimraf": "^6.1.0",
+		"rimraf": "6.1.2",
 		"simple-statistics": "^7.8.3",
 		"skia-canvas": "^3.0.7",
 		"sonic-boom": "^4.2.0",
