--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.3.4/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.3.7/schema.json",
 	"assist": {
 		"actions": {
 			"source": {
@@ -33,6 +33,8 @@
 			"**/*.cjs",
 			"**/*.d.ts",
 			"**/*.tsx",
+			"**/*.html",
+			"**/*.css",
 			"!**/node_modules",
 			"!**/dist",
 			"!**/coverage",
@@ -112,6 +114,22 @@
 			"quoteStyle": "single",
 			"trailingCommas": "none",
 			"arrowParentheses": "asNeeded"
+		}
+	},
+	"html": {
+		"experimentalFullSupportEnabled": true,
+		"formatter": {
+			"enabled": true,
+			"selfCloseVoidElements": "always"
+		}
+	},
+	"css": {
+		"parser": {
+			"cssModules": true,
+			"tailwindDirectives": true
+		},
+		"formatter": {
+			"enabled": true
 		}
 	}
 }
