--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -3,7 +3,9 @@
 	"compilerOptions": {
 		"outDir": "dist",
 		"jsx": "react-jsx",
-		"noEmit": false
+		"noEmit": false,
+		"isolatedDeclarations": true,
+		"isolatedModules": true
 	},
 	"include": ["src"]
 }
