--- a/packages/toolkit/src/tsconfig.json
+++ b/packages/toolkit/src/tsconfig.json
@@ -2,7 +2,9 @@
 	"extends": "../../../tsconfig.base.json",
 	"compilerOptions": {
 		"rootDir": "../../../",
-		"outDir": "../dist"
+		"outDir": "../dist",
+		"isolatedDeclarations": true,
+		"isolatedModules": true
 	},
 	"include": ["."]
 }
