--- a/packages/oldschoolgg/tsconfig.json
+++ b/packages/oldschoolgg/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "astro/tsconfigs/strict",
+	"extends": "../../tsconfig.base.json",
 	"include": [".astro/types.d.ts", "**/*"],
 	"exclude": ["dist"],
 	"compilerOptions": {
