--- a/packages/oldschoolgg/package.json
+++ b/packages/oldschoolgg/package.json
@@ -22,6 +22,7 @@
 		"react-dom": "^19.2.0",
 		"react-responsive-modal": "^6.4.2",
 		"tailwindcss": "^4.1.17",
+		"vite": "^6.4.1",
 		"wouter": "^3.7.1",
 		"wretch": "^2.11.0",
 		"xml2js": "^0.6.2",
@@ -29,7 +30,6 @@
 	},
 	"devDependencies": {
 		"@types/react": "^19.2.6",
-		"@types/react-dom": "^19.2.3",
-		"@types/xml2js": "^0.4.14"
+		"@types/react-dom": "^19.2.3"
 	}
 }
