--- a/packages/robochimp/package.json
+++ b/packages/robochimp/package.json
@@ -6,23 +6,25 @@
 	"scripts": {
 		"build": "pnpm gen && tsx esbuild.mts",
 		"start": "pnpm build && node --enable-source-maps ./dist/index.js",
+		"dev": "tsx esbuild.mts && node --enable-source-maps ./dist/index.js",
 		"test": "tsc -p src && pnpm test:unit",
 		"test:unit": "vitest run --config vitest.unit.config.mts",
-		"dev": "pnpm fetch-schema && pnpm build && pnpm test",
+		"devsss": "pnpm fetch-schema && pnpm build && pnpm test",
 		"gen": "concurrently \"npx prisma generate --schema prisma/bso_schema.prisma\" \"npx prisma generate --schema prisma/osb_schema.prisma\" \"npx prisma generate --schema prisma/robochimp_schema.prisma\"",
 		"fetch-schema": "tsx ./scripts/fetchSchema.ts",
 		"dbpush": "npx prisma db push --schema=./prisma/robochimp_schema.prisma"
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.19.5",
+		"@hono/oauth-providers": "^0.8.5",
 		"@octokit/graphql": "^8.1.1",
 		"@oldschoolgg/toolkit": "workspace:*",
 		"@oldschoolgg/util": "workspace:*",
 		"@prisma/adapter-pg": "^6.19.0",
 		"@prisma/client": "^6.19.0",
 		"@sapphire/discord-utilities": "^2.12.0",
-		"hono": "^4.10.3",
 		"dotenv": "^16.5.0",
+		"hono": "^4.10.3",
 		"ioredis": "^5.8.2",
 		"oldschooljs": "workspace:*",
 		"remeda": "^2.23.0",
