--- a/packages/oldschoolgg/package.json
+++ b/packages/oldschoolgg/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@astrojs/react": "^4.4.2",
+		"@lucide/astro": "^0.555.0",
 		"@mantine/hooks": "^8.3.9",
 		"@oldschoolgg/util": "workspace:*",
 		"@tailwindcss/vite": "^4.1.17",
