--- a/packages/oldschoolgg/package.json
+++ b/packages/oldschoolgg/package.json
@@ -14,14 +14,12 @@
 		"@mantine/hooks": "^8.3.9",
 		"@oldschoolgg/util": "workspace:*",
 		"@tailwindcss/vite": "^4.1.17",
-		"astro": "^5.15.9",
+		"astro": "^5.16.3",
 		"oldschooljs": "workspace:*",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
-		"react-responsive-modal": "^6.4.2",
 		"tailwindcss": "^4.1.17",
-		"vite": "^6.4.1",
-		"wretch": "^2.11.0"
+		"vite": "^6.4.1"
 	},
 	"devDependencies": {
 		"@types/react": "^19.2.6",
