--- a/packages/robochimp/.env.test
+++ b/packages/robochimp/.env.test
@@ -15,3 +15,9 @@ GITHUB_TOKEN=111111111111111111111111111111
 PATRON_LOG_CHANNEL_ID=111111111111111111111
 PATRON_LOGS_WEBHOOK=AAAA111111111111111111111AAA
 NODE_ENV=development
+
+API_URL=https://test.com
+FRONTEND_URL=https://example.com
+DISCORD_CLIENT_SECRET=ffffffffffffffffff
+COOKIE_ORIGIN=.example.com
+OAUTH_SECRET=ygPIHS27XMddzCpBabiVvAID+cWDyq7YFFb9aTSxhsI=
