--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 	},
 	"dependencies": {
 		"@discordjs/rest": "^2.6.0",
-		"@discordjs/ws": "^2.0.3",
+		"@discordjs/ws": "^2.0.4",
 		"@electric-sql/pglite": "^0.3.10",
 		"@oldschoolgg/collectionlog": "workspace:*",
 		"@oldschoolgg/discord": "workspace:*",
@@ -53,7 +53,6 @@
 		"@sapphire/snowflake": "^3.5.3",
 		"@sapphire/time-utilities": "^1.6.0",
 		"@sapphire/timer-manager": "^1.0.2",
-		"@vladfrangu/async_event_emitter": "^2.4.7",
 		"bufferutil": "^4.0.9",
 		"dotenv": "^16.5.0",
 		"exit-hook": "^4.0.0",
@@ -68,27 +67,28 @@
 		"remeda": "^2.23.0",
 		"rimraf": "6.1.2",
 		"simple-statistics": "^7.8.3",
-		"skia-canvas": "^3.0.7",
+		"skia-canvas": "^3.0.8",
 		"sonic-boom": "^4.2.0",
 		"ts-pattern": "^5.7.1",
-		"tsdown": "^0.16.1",
 		"zod": "^4.1.12"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.3.7",
+		"@biomejs/biome": "2.3.8",
 		"@types/luxon": "^3.7.1",
 		"@types/node": "^24.5.2",
 		"@types/pg": "^8.15.5",
 		"@vitest/coverage-v8": "^4.0.8",
+		"tsdown": "0.16.1",
 		"concurrently": "^9.2.0",
-		"esbuild": "0.25.11",
+		"esbuild": "0.27.1",
 		"nodemon": "^3.1.10",
+		"@vladfrangu/async_event_emitter": "^2.4.7",
 		"prettier": "^3.6.2",
 		"prisma": "^6.19.0",
-		"sharp": "^0.34.4",
-		"tsx": "^4.20.5",
-		"typescript": "^5.9.2",
-		"vitest": "^4.0.0"
+		"sharp": "0.34.5",
+		"tsx": "4.21.0",
+		"typescript": "^5.9.3",
+		"vitest": "4.0.15"
 	},
 	"pnpm": {
 		"neverBuiltDependencies": []
