Update wiki deps

--- a/docs/package.json
+++ b/docs/package.json
@@ -11,13 +11,13 @@
 	},
 	"dependencies": {
 		"@astrojs/preact": "4.1.3",
-		"@astrojs/starlight": "0.36.2",
+		"@astrojs/starlight": "0.37.1",
 		"@astrojs/starlight-tailwind": "4.0.2",
-		"@tailwindcss/vite": "4.1.17",
-		"astro": "5.16.3",
-		"collapse-white-space": "^2.1.0",
+		"@tailwindcss/vite": "4.1.18",
+		"astro": "5.16.6",
+		"collapse-white-space": "2.1.0",
 		"oldschooljs": "workspace:*",
-		"preact": "^10.26.9",
+		"preact": "10.28.1",
 		"remeda": "^2.23.0",
 		"vite": "^6.4.1",
 		"tailwindcss": "^4.1.17",
