--- a/docs/package.json
+++ b/docs/package.json
@@ -16,14 +16,16 @@
 		"@tailwindcss/vite": "4.1.18",
 		"astro": "5.16.6",
 		"collapse-white-space": "2.1.0",
+		"gray-matter": "^4.0.3",
 		"oldschooljs": "workspace:*",
 		"preact": "10.28.1",
 		"remeda": "^2.23.0",
-		"vite": "^6.4.1",
+		"starlight-links-validator": "^0.19.2",
 		"tailwindcss": "^4.1.17",
 		"unified": "^11.0.5",
 		"unist-util-visit": "^5.0.0",
-		"unist-util-visit-parents": "^6.0.1"
+		"unist-util-visit-parents": "^6.0.1",
+		"vite": "^6.4.1"
 	},
 	"devDependencies": {
 		"@types/hast": "^3.0.4",
