--- a/packages/oldschooljs/package.json
+++ b/packages/oldschooljs/package.json
@@ -20,7 +20,10 @@
 	"scripts": {
 		"test": "concurrently \"pnpm test:unit\" \"tsc --noEmit -p test\" \"tsc --noEmit -p src\"",
 		"test:unit": "vitest run --coverage",
-		"generate": "tsx --tsconfig scripts/tsconfig.json scripts/prepare && tsx --tsconfig scripts/tsconfig.json scripts/itemsPostProcess.ts",
+		"generate": "tsx --tsconfig scripts/tsconfig.json scripts/prepare.ts",
+		"scrapeitems": "tsx --tsconfig scripts/tsconfig.json scripts/item-scraper.ts",
+		"moid": "tsx --tsconfig scripts/tsconfig.json scripts/scraper/moid.ts",
+		"prepareitems": "tsx --tsconfig scripts/tsconfig.json scripts/prepareItems.ts && tsx --tsconfig scripts/tsconfig.json scripts/itemsPostProcess.ts",
 		"enum": "tsx --tsconfig scripts/tsconfig.json scripts/enum.ts",
 		"build": "tsdown"
 	},
