--- a/packages/oldschooljs/scripts/tsconfig.json
+++ b/packages/oldschooljs/scripts/tsconfig.json
@@ -1,11 +1,33 @@
 {
-	"extends": "../../../tsconfig.base.json",
-	"include": [".", "../src/**/*"],
+	"include": ["./*.ts", "../src/**/*"],
 	"compilerOptions": {
-		"noEmit": true,
-		"composite": false,
-		"paths": {
-			"@/*": ["../src/*"]
-		}
+
+    "target": "es2022",
+    "allowJs": true,
+
+    "module": "Node16",
+	"moduleResolution": "node16",
+
+    "isolatedModules": true,
+    "verbatimModuleSyntax": true,
+
+    /* Strictness */
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+
+    /* AND if you're building for a library: */
+    "declaration": true,
+
+    "declarationMap": true,
+
+    "noEmit": true,
+
+    /* If your code doesn't run in the DOM: */
+    "lib": ["es2022"],
+
+	"paths": {
+		"@/*": ["../src/*"]
+	},
+	"allowArbitraryExtensions": true
 	}
 }
