--- a/packages/oldschooljs/package.json
+++ b/packages/oldschooljs/package.json
@@ -28,7 +28,8 @@
 		"build": "tsdown"
 	},
 	"dependencies": {
-		"deepmerge": "4.3.1"
+		"deepmerge": "4.3.1",
+		"@oldschoolgg/schemas": "workspace:*"
 	},
 	"devDependencies": {
 		"deep-object-diff": "^1.1.9",
