--- a/packages/oldschooljs/scripts/tsconfig.json
+++ b/packages/oldschooljs/scripts/tsconfig.json
@@ -1,33 +1,47 @@
 {
-	"include": ["./*.ts", "../src/**/*"],
+	"extends": "../../../tsconfig.base.json",
+	"include": ["./*.ts", "../src/**/*", "../data"],
 	"compilerOptions": {
-
+		  /* Base Options: */
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "target": "es2022",
     "allowJs": true,
-
-    "module": "Node16",
-	"moduleResolution": "node16",
-
+    "resolveJsonModule": true,
+    "moduleDetection": "force",
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
 
     /* Strictness */
+    "strict": true,
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true,
+
+    /* If transpiling with TypeScript: */
+    "module": "NodeNext",
+    "outDir": "dist",
+    "sourceMap": true,
 
     /* AND if you're building for a library: */
     "declaration": true,
 
+    /* AND if you're building for a library in a monorepo: */
+    "composite": true,
     "declarationMap": true,
 
+    /* If NOT transpiling with TypeScript: */
+    "module": "preserve",
     "noEmit": true,
+
+    /* If your code runs in the DOM: */
+    "lib": ["es2022", "dom", "dom.iterable"],
 
     /* If your code doesn't run in the DOM: */
     "lib": ["es2022"],
-
-	"paths": {
-		"@/*": ["../src/*"]
-	},
-	"allowArbitraryExtensions": true
+		"noEmit": true,
+		"paths": {
+			"@/*": ["../src/*"]
+		},
+		"allowArbitraryExtensions": true
 	}
 }
