--- a/packages/scraper/src/tsconfig.json
+++ b/packages/scraper/src/tsconfig.json
@@ -2,7 +2,7 @@
 	"extends": "../../../tsconfig.base.json",
 	"compilerOptions": {
 		"rootDir": "./",
-		"outDir": "../dist",
+		"outDir": "../dist"
 	},
-	"include": [".", "./data/*.json"]
+	"include": ["./**/*.ts"]
 }
