--- a/packages/scraper/package.json
+++ b/packages/scraper/package.json
@@ -12,7 +12,7 @@
 		"moid": "tsx src/moid.ts",
 		"prices": "tsx src/prices.ts",
 		"scrapeitems": "tsx src/item-scraper.ts",
-		"test": "pnpm tsc -p src --noEmit"
+		"test": "pnpm tsc -p src --noEmit && pnpm vitest run"
 	},
 	"dependencies": {
 		"@oldschoolgg/schemas": "workspace:*",
@@ -20,6 +20,6 @@
 		"@oldschoolgg/util": "workspace:*",
 		"oldschooljs": "workspace:*",
 		"remeda": "^2.23.0",
-		"wtf_wikipedia": "^10.3.2"
+		"wretch": "^3.0.6"
 	}
 }
