--- a/packages/oldschoolgg/package.json
+++ b/packages/oldschoolgg/package.json
@@ -14,6 +14,7 @@
 		"@mantine/hooks": "^8.3.9",
 		"@oldschoolgg/util": "workspace:*",
 		"@tailwindcss/vite": "^4.1.17",
+		"@tanstack/react-table": "^8.21.3",
 		"astro": "^5.16.3",
 		"lucide-react": "^0.555.0",
 		"oldschooljs": "workspace:*",
