Add robochimp watch script

--- a/packages/robochimp/package.json
+++ b/packages/robochimp/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"build": "pnpm gen && tsx esbuild.mts",
 		"start": "pnpm build && node --enable-source-maps ./dist/index.js",
+		"watch": "nodemon --delay 1ms -e ts -w src --exec \"pnpm tsx esbuild.mts && node --enable-source-maps ./dist/index.js\"",
 		"dev": "tsx esbuild.mts && node --enable-source-maps ./dist/index.js",
 		"test": "tsc -p src && pnpm test:unit",
 		"test:unit": "vitest run --config vitest.unit.config.mts",
