Add to schemas package

--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -9,7 +9,7 @@
 	},
 	"scripts": {
 		"build": "rimraf ./dist && tsc -p src --noEmit false",
-		"test": "pnpm tsc -p src --noEmit"
+		"test": "pnpm tsc -p src --noEmit && vitest run --coverage"
 	},
 	"dependencies": {
 		"zod": "^4.1.12",
