--- a/packages/robochimp/package.json
+++ b/packages/robochimp/package.json
@@ -13,7 +13,8 @@
 		"devsss": "pnpm fetch-schema && pnpm build && pnpm test",
 		"gen": "concurrently \"npx prisma generate --schema prisma/bso_schema.prisma\" \"npx prisma generate --schema prisma/osb_schema.prisma\" \"npx prisma generate --schema prisma/robochimp_schema.prisma\"",
 		"fetch-schema": "tsx ./scripts/fetchSchema.ts",
-		"dbpush": "npx prisma db push --schema=./prisma/robochimp_schema.prisma"
+		"dbpush": "npx prisma db push --schema=./prisma/robochimp_schema.prisma",
+		"seed": "tsx --tsconfig=./src/tsconfig.json ./src/scripts/seed.ts"
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.19.5",
