Various website improvements/fixes

--- a/packages/oldschoolgg/package.json
+++ b/packages/oldschoolgg/package.json
@@ -20,6 +20,7 @@
 		"oldschooljs": "workspace:*",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
+		"react-responsive-modal": "^7.1.0",
 		"tailwindcss": "^4.1.17",
 		"vite": "^6.4.1",
 		"wretch": "^3.0.5",
