Use util pkg in osjs

--- a/packages/oldschooljs/package.json
+++ b/packages/oldschooljs/package.json
@@ -26,7 +26,8 @@
 	},
 	"dependencies": {
 		"deepmerge": "4.3.1",
-		"@oldschoolgg/gear": "workspace:*"
+		"@oldschoolgg/gear": "workspace:*",
+		"@oldschoolgg/util": "workspace:*"
 	},
 	"devDependencies": {
 		"deep-object-diff": "^1.1.9",
