--- a/packages/toolkit/package.json
+++ b/packages/toolkit/package.json
@@ -23,7 +23,7 @@
 		"decimal.js": "^10.6.0",
 		"deep-object-diff": "^1.1.9",
 		"deepmerge": "4.3.1",
-		"@oldschoolgg/rng": "workspace:*",
+		"node-rng": "^0.0.3",
 		"math-expression-evaluator": "^1.3.14",
 		"emoji-regex": "^10.6.0"
 	},
