--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"watch": "nodemon --delay 1ms -e ts -w src --exec \"pnpm exec-and-start\"",
 		"exec-and-start": "concurrently \"pnpm exec-sql\" \"pnpm build-and-run\"",
 		"build-and-run": "tsx esbuild.mts && node --trace-warnings --enable-source-maps dist",
-		"dev": "pnpm --filter cli build && node --env-file=.env packages/cli/dist/cli.js",
+		"dev": "tsx --tsconfig=packages/cli/tsconfig.json --env-file=.env packages/cli/src/cli.tsx",
 		"watch:tsc": "tsc -w -p src",
 		"start": "pnpm watch",
 		"lint": "tsx --tsconfig scripts/tsconfig.json scripts/lint.ts",
@@ -32,7 +32,7 @@
 		"test:ci:unit": "pnpm concurrent \"pnpm test:unit\" \"pnpm test:lint\" \"tsc -p tests/integration\" \"tsc -p tests/unit\"",
 		"============MISC": "============",
 		"concurrent": "concurrently --raw --kill-others-on-fail",
-		"build:packages": "pnpm -r --filter \"!.\" --filter \"!./docs\" --filter \"!test-dashboard\" --filter \"!oldschoolgg\" --filter \"!robochimp\" build",
+		"build:packages": "pnpm -r --filter \"!.\" --filter \"!./docs\" --filter \"!cli\" --filter \"!test-dashboard\" --filter \"!oldschoolgg\" --filter \"!robochimp\" build",
 		"============monorepo": "============",
 		"monorepo:build": "pnpm concurrent \"pnpm -r --filter \"!.\" --filter \"!./docs\" --filter \"!test-dashboard\" --filter \"!oldschoolgg\" build\" \"pnpm gen\" && tsx esbuild.mts",
 		"monorepo:test": "pnpm --stream --workspace-concurrency=2 -r test && pnpm test"
@@ -79,7 +79,7 @@
 		"@types/luxon": "^3.7.1",
 		"@types/node": "^24.5.2",
 		"@types/pg": "^8.15.5",
-		"@vitest/coverage-v8": "^4.0.8",
+		"@vitest/coverage-v8": "^4.0.18",
 		"@vladfrangu/async_event_emitter": "^2.4.7",
 		"concurrently": "^9.2.1",
 		"esbuild": "0.27.2",
@@ -90,7 +90,7 @@
 		"tsdown": "0.20.1",
 		"tsx": "4.21.0",
 		"typescript": "^5.9.3",
-		"vitest": "4.0.15"
+		"vitest": "4.0.18"
 	},
 	"pnpm": {
 		"neverBuiltDependencies": []
