--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -9,7 +9,8 @@
 	},
 	"scripts": {
 		"build": "rimraf ./dist && tsc -p src --noEmit false",
-		"test": "pnpm tsc -p src --noEmit && vitest run --coverage"
+		"test:types": "tsc -p src --noEmit",
+		"test:unit": "vitest run"
 	},
 	"dependencies": {
 		"zod": "^4.1.12",
