--- a/packages/discord/package.json
+++ b/packages/discord/package.json
@@ -9,7 +9,8 @@
 	},
 	"scripts": {
 		"build": "rimraf ./dist && tsc -p src --noEmit false",
-		"test": "pnpm tsc -p src --noEmit && vitest run --config vitest.unit.config.mts"
+		"test:types": "pnpm tsc -p src --noEmit",
+		"test:unit": "vitest run --config vitest.unit.config.mts"
 	},
 	"dependencies": {
 		"@discordjs/builders": "1.13.1",
