--- a/packages/oldschooljs/package.json
+++ b/packages/oldschooljs/package.json
@@ -16,8 +16,8 @@
 	},
 	"license": "MIT",
 	"scripts": {
-		"test": "concurrently \"pnpm test:unit\" \"tsc --noEmit -p test\" \"tsc --noEmit -p src\"",
-		"test:unit": "vitest run --coverage",
+		"test:types": "concurrently \"tsc --noEmit -p test\" \"tsc --noEmit -p src\"",
+		"test:unit": "vitest run",
 		"generate": "tsx --tsconfig scripts/tsconfig.json scripts/prepare && tsx --tsconfig scripts/tsconfig.json scripts/itemsPostProcess.ts",
 		"enum": "tsx --tsconfig scripts/tsconfig.json scripts/enum.ts",
 		"build": "tsdown"
