Refactor CLI to execute repo scripts
This PR isolates the CLI package from the main application TypeScript graph by replacing direct source imports with a script dispatcher.

CLI UX remains unchanged while build boundaries are properly enforced.

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -4,11 +4,7 @@
 		"outDir": "dist",
 		"jsx": "react-jsx",
 		"noEmit": false,
-		"paths": {
-			"@/*": ["../../src/*"],
-			"@scripts/*": ["../../scripts/*"]
-		},
 		"isolatedModules": true
 	},
-	"include": ["src", "../../src/**/*"]
+	"include": ["src"]
 }
