--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"generate:robochimp": "prisma generate --no-hints --schema prisma/robochimp.prisma",
 		"bso-data": "git fetch origin bso:bso && git checkout bso -- ./data/bso/ && git diff --name-only master bso | sort > data/misc/bso-diff.txt",
 		"exec-sql": "tsx --tsconfig=scripts/tsconfig.json --env-file=.env scripts/execute-sql.ts",
+		"cli:script": "tsx --tsconfig scripts/tsconfig.json scripts/cliScriptRunner.ts",
 		"============BUILDING": "============",
 		"build": "pnpm build:packages && pnpm gen && concurrently --raw \"tsx esbuild.mts\" \"pnpm test:types\"",
 		"gen": "concurrently --raw \"prisma generate --no-hints\" \"pnpm generate:robochimp\" && echo \"Generated Prisma Client\"",
