--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 		"exec-and-start": "concurrently \"pnpm exec-sql\" \"pnpm build-and-run\"",
 		"build-and-run": "tsx esbuild.mts && node --trace-warnings --enable-source-maps dist",
 		"dev": "tsx --tsconfig=packages/cli/tsconfig.json --env-file=.env packages/cli/src/cli.tsx",
+		"docs:generate:commands": "tsx --tsconfig scripts/tsconfig.json scripts/wiki/renderCommandsDoc.ts",
+		"docs:build": "pnpm docs:generate:commands && pnpm -C docs build",
+		"docs:dev": "pnpm docs:generate:commands && pnpm -C docs dev",
 		"watch:tsc": "tsc -w -p src",
 		"start": "pnpm watch",
 		"lint": "tsx --tsconfig scripts/tsconfig.json scripts/lint.ts",
